--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-toastify": "^10.0.6",
     "redux": "^5.0.1",
     "redux-toolkit": "^1.1.2",
+    "vercel": "^37.14.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
